@@ -2,55 +2,41 @@ package com.espaciosdeportivos.service.impl;
 
 import com.espaciosdeportivos.dto.QrDTO;
 import com.espaciosdeportivos.model.Qr;
-// import com.espaciosdeportivos.model.Reserva;
-// import com.espaciosdeportivos.model.Invitado;
-// import com.espaciosdeportivos.model.UsuarioControl;
+import com.espaciosdeportivos.model.Reserva;
+import com.espaciosdeportivos.model.Invitado;
+import com.espaciosdeportivos.model.UsuarioControl;
 import com.espaciosdeportivos.repository.QrRepository;
-// import com.espaciosdeportivos.repository.ReservaRepository;
-// import com.espaciosdeportivos.repository.InvitadoRepository;
-// import com.espaciosdeportivos.repository.UsuarioControlRepository;
+import com.espaciosdeportivos.repository.ReservaRepository;
+import com.espaciosdeportivos.repository.InvitadoRepository;
+import com.espaciosdeportivos.repository.UsuarioControlRepository;
 import com.espaciosdeportivos.service.IQrService;
 import com.espaciosdeportivos.validation.QrValidator;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Transactional
 public class QrServiceImpl implements IQrService {
 
     private final QrRepository qrRepository;
+    private final ReservaRepository reservaRepository;
+    private final InvitadoRepository invitadoRepository;
+    private final UsuarioControlRepository usuarioControlRepository;
     private final QrValidator qrValidator;
 
-    // Repositorios comentados temporalmente
-    // private final ReservaRepository reservaRepository;
-    // private final InvitadoRepository invitadoRepository;
-    // private final UsuarioControlRepository usuarioControlRepository;
-
-    @Autowired
-    public QrServiceImpl(
-            QrRepository qrRepository,
-            QrValidator qrValidator
-            // ,ReservaRepository reservaRepository,
-            // InvitadoRepository invitadoRepository,
-            // UsuarioControlRepository usuarioControlRepository
-    ) {
-        this.qrRepository = qrRepository;
-        this.qrValidator = qrValidator;
-        // this.reservaRepository = reservaRepository;
-        // this.invitadoRepository = invitadoRepository;
-        // this.usuarioControlRepository = usuarioControlRepository;
-    }
-
     @Override
+    @Transactional(readOnly = true)
     public List<QrDTO> obtenerTodosLosQrs() {
         return qrRepository.findByEstadoTrue()
                 .stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -62,67 +48,81 @@ public class QrServiceImpl implements IQrService {
     }
 
     @Override
-    @Transactional
-    public QrDTO crearQr(QrDTO qrDTO) {
-        qrValidator.validarQr(qrDTO);
+    public QrDTO crearQr(@Valid QrDTO dto) {
+        qrValidator.validarQr(dto);
 
-        Qr qr = convertToEntity(qrDTO);
-        qr.setEstado(true); // por defecto activo
+        Reserva reserva = reservaRepository.findById(dto.getIdReserva())
+                .orElseThrow(() -> new RuntimeException("Reserva no encontrada con ID: " + dto.getIdReserva()));
 
-        Qr qrGuardado = qrRepository.save(qr);
-        return convertToDTO(qrGuardado);
+        Invitado invitado = invitadoRepository.findById(dto.getIdInvitado())
+                .orElseThrow(() -> new RuntimeException("Invitado no encontrado con ID: " + dto.getIdInvitado()));
+
+        UsuarioControl usuarioControl = usuarioControlRepository.findById(dto.getIdUsuarioControl())
+                .orElseThrow(() -> new RuntimeException("UsuarioControl no encontrado con ID: " + dto.getIdUsuarioControl()));
+
+        Qr entidad = toEntity(dto, reserva, invitado, usuarioControl);
+        entidad.setIdQr(null);
+        entidad.setEstado(Boolean.TRUE);
+
+        return convertToDTO(qrRepository.save(entidad));
     }
 
     @Override
-    @Transactional
-    public QrDTO actualizarQr(Long id, QrDTO qrDTO) {
-        Qr qrExistente = qrRepository.findById(id)
+    public QrDTO actualizarQr(Long id, @Valid QrDTO dto) {
+        Qr existente = qrRepository.findByIdQrAndEstadoTrue(id)
                 .orElseThrow(() -> new RuntimeException("QR no encontrado con ID: " + id));
 
-        qrValidator.validarQr(qrDTO);
+        qrValidator.validarQr(dto);
 
-        qrExistente.setCodigoQr(qrDTO.getCodigoQr());
-        qrExistente.setFechaGeneracion(qrDTO.getFechaGeneracion());
-        qrExistente.setFechaExpiracion(qrDTO.getFechaExpiracion());
-        qrExistente.setEstado(qrDTO.getEstado());
+        Reserva reserva = reservaRepository.findById(dto.getIdReserva())
+                .orElseThrow(() -> new RuntimeException("Reserva no encontrada con ID: " + dto.getIdReserva()));
 
-        Qr qrActualizado = qrRepository.save(qrExistente);
-        return convertToDTO(qrActualizado);
+        Invitado invitado = invitadoRepository.findById(dto.getIdInvitado())
+                .orElseThrow(() -> new RuntimeException("Invitado no encontrado con ID: " + dto.getIdInvitado()));
+
+        UsuarioControl usuarioControl = usuarioControlRepository.findById(dto.getIdUsuarioControl())
+                .orElseThrow(() -> new RuntimeException("UsuarioControl no encontrado con ID: " + dto.getIdUsuarioControl()));
+
+        existente.setCodigoQr(dto.getCodigoQr());
+        existente.setFechaGeneracion(dto.getFechaGeneracion());
+        existente.setFechaExpiracion(dto.getFechaExpiracion());
+        existente.setEstado(dto.getEstado());
+        existente.setDescripcion(dto.getDescripcion());
+        existente.setReserva(reserva);
+        existente.setInvitado(invitado);
+        existente.setUsuarioControl(usuarioControl);
+
+        return convertToDTO(qrRepository.save(existente));
     }
 
     @Override
-    @Transactional
     public QrDTO eliminarQr(Long id) {
-        Qr qrExistente = qrRepository.findById(id)
+        Qr existente = qrRepository.findByIdQrAndEstadoTrue(id)
                 .orElseThrow(() -> new RuntimeException("QR no encontrado con ID: " + id));
-
-        qrExistente.setEstado(false); // baja lógica
-        Qr qrEliminado = qrRepository.save(qrExistente);
-
-        return convertToDTO(qrEliminado);
+        existente.setEstado(Boolean.FALSE);
+        return convertToDTO(qrRepository.save(existente));
     }
 
     @Override
-    @Transactional
+    public void eliminarQrFisicamente(Long id) {
+        Qr existente = qrRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("QR no encontrado con ID: " + id));
+        qrRepository.delete(existente);
+    }
+
+    @Override
     public Qr obtenerQrConBloqueo(Long id) {
         Qr qr = qrRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("QR no encontrado con ID: " + id));
         try {
-            Thread.sleep(15000); // simula espera
+            Thread.sleep(15000); // Simula espera
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
         }
         return qr;
     }
 
-    @Override
-    @Transactional
-    public void eliminarQrFisicamente(Long id) {
-        Qr qrExistente = qrRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("QR no encontrado con ID: " + id));
-        qrRepository.delete(qrExistente);
-    }
-
+    // ---------- mapping ----------
     private QrDTO convertToDTO(Qr qr) {
         return QrDTO.builder()
                 .idQr(qr.getIdQr())
@@ -130,31 +130,24 @@ public class QrServiceImpl implements IQrService {
                 .fechaGeneracion(qr.getFechaGeneracion())
                 .fechaExpiracion(qr.getFechaExpiracion())
                 .estado(qr.getEstado())
-                // .idReserva(qr.getReserva() != null ? qr.getReserva().getIdReserva() : null)
-                // .idInvitado(qr.getInvitado() != null ? qr.getInvitado().getIdPersona() : null)
-                // .idUsuarioControl(qr.getUsuarioControl() != null ? qr.getUsuarioControl().getIdPersona() : null)
+                .descripcion(qr.getDescripcion())
+                .idReserva(qr.getReserva() != null ? qr.getReserva().getIdReserva() : null)
+                .idInvitado(qr.getInvitado() != null ? qr.getInvitado().getIdPersona() : null)
+                .idUsuarioControl(qr.getUsuarioControl() != null ? qr.getUsuarioControl().getIdPersona() : null)
                 .build();
     }
 
-    private Qr convertToEntity(QrDTO dto) {
-        // Reserva reserva = reservaRepository.findById(dto.getIdReserva())
-        //         .orElseThrow(() -> new RuntimeException("Reserva no encontrada con ID: " + dto.getIdReserva()));
-
-        // Invitado invitado = invitadoRepository.findById(dto.getIdInvitado())
-        //         .orElseThrow(() -> new RuntimeException("Invitado no encontrado con ID: " + dto.getIdInvitado()));
-
-        // UsuarioControl usuarioControl = usuarioControlRepository.findById(dto.getIdUsuarioControl())
-        //         .orElseThrow(() -> new RuntimeException("UsuarioControl no encontrado con ID: " + dto.getIdUsuarioControl()));
-
+    private Qr toEntity(QrDTO dto, Reserva reserva, Invitado invitado, UsuarioControl usuarioControl) {
         return Qr.builder()
                 .idQr(dto.getIdQr())
                 .codigoQr(dto.getCodigoQr())
                 .fechaGeneracion(dto.getFechaGeneracion())
                 .fechaExpiracion(dto.getFechaExpiracion())
-                .estado(dto.getEstado())
-                // .reserva(reserva)
-                // .invitado(invitado)
-                // .usuarioControl(usuarioControl)
+                .estado(dto.getEstado() != null ? dto.getEstado() : Boolean.TRUE)
+                .descripcion(dto.getDescripcion())
+                .reserva(reserva)
+                .invitado(invitado)
+                .usuarioControl(usuarioControl)
                 .build();
     }
 }
